# biotk

./: .gitignore  .merlin  Changes  INSTALL  README.md  TODO  _oasis  _tags  biotk.opam  dune-project  gzt.opam  myocamlbuild.ml  setup.ml
app/: croquis_demo.ml  dune
app/bench/: dune  pwm_bench.ml
data/: survival.tsv  test.ibed
examples/: bam_bai.ml  bam_traversal.ml  dune  pwm_bench.ml
lib/: alphabet.ml  alphabet.mli  amino_acid.ml  amino_acid.mli  bai.ml  bai.mli  bam.ml  bam.mli  bam_iterator.ml  bam_iterator.mli  bamstats.ml  bamstats.mli  bed.ml  bed.mli  bgzf.ml  bgzf.mli  cisbp.ml  cisbp.mli  dataframe.ml  dataframe.mli  dna_motif_EM.ml  dna_motif_EM.mli  dna_sequence.ml  dna_sequence.mli  dune  encode.ml  encode.mli  fasta.ml  fasta.mli  fastq.ml  fastq.mli  featureCounts.ml  featureCounts.mli  gAnnot.ml  gAnnot.mli  gLoc.ml  gLoc.mli  gcf.ml  gene.ml  gene.mli  (+58 more)
lib/croquis/: croquis.ml  croquis.mli  dune  vg_text.ml  vg_text.mli
lib/pipes/: dune  gzt_pipes.ml  gzt_pipes.mli
src/: META  guizmin.ml  guizmin.mli  guizmin.mllib  guizmin_console.ml  guizmin_mb_pipeline.ml  guizmin_repo.ml  guizmin_repo.mli  guizmin_table.ml  guizmin_table.mli  guizmin_unix.ml  gzmAltCore.ml  gzmAltCore.mli  gzmConsole.ml  gzmConsole.mli  gzmCore.ml  gzmCore.mli  gzmMakefile.ml  gzmMakefile.mli  gzmTarget.ml  gzmTarget.mli  gzmUcsc.ml  gzmUcsc.mli  gzmUtils.ml  gzmUtils.mli  proto.ml  test.ml  test_mouse_ES.ml  test_yeast.ml
src/app/: experiment_description.ml  guizmin_main.ml  gzt_main.ml  run_pipeline.ml
src/bioinfo/: Gcf.ml  Gcf.mli  MBPipeline.ml  MBPipeline.mli  MBSchema.ml  MBSchema.mli  bed.ml  bed.mli  bioinfo.mllib  bowtie.ml  bowtie.mli  ensembl.ml  ensembl.mli  fastQC.ml  fastQC.mli  fasta.ml  fasta.mli  fastq.ml  fastq.mli  gcf.ml  gcf.mli  gtf.ml  gtf.mli  guizmin_bioinfo.ml  gzmBowtie.ml  gzmBowtie.mli  gzmHtseq.ml  gzmHtseq.mli  gzmMBSchema.mli  gzmMacs.ml  gzmMacs.mli  gzmMisc.ml  gzmMisc.mli  gzmUcsc.ml  gzmUcsc.mli  htseq.ml  htseq.mli  jaspar.ml  jaspar.mli  macs.ml  (+13 more)
src/bioinfo/labs/: binding_region_finder.ml  binding_region_finder.mli  bioinfo_labs.ml  bioinfo_labs.mli  meme_suite.ml  meme_suite.mli  mlea.ml  mlea.mli  pwm.ml  pwm.mli
src/examples/: test.ml  test_mouse_ES.ml  test_yeast.ml  ucsc_lift_over.ml
src/lib/: encode.ml  fasta.ml  fasta.mli  macs.ml  macs.mli  macs2.ml  macs2.mli  ucsc_gb.ml  ucsc_gb.mli
src/syntax/: pa_guizmin.ml  syntax.mllib
src/tests/: test.ml  test_fasta.ml
src/tools/: guizmin_repo.ml  guizmin_repo.mli  guizmin_table.ml  guizmin_table.mli  guizmin_table_sig.ml  guizmin_unix.ml  guizmin_unix.mli  guizmin_unix.mllib
src/unix/: guizmin_unix.ml
src/workflow/: bowtie.ml  bowtie.mli  fasta.mli  fastq.ml  fastq.mli  types.ml
v1/: _oasis  myocamlbuild.ml  setup.ml
v1/doc/: specification.org
v1/src/: guizmin.ml  guizmin_console.mli  guizmin_table.mli  guizmin_utils.ml  guizmin_utils.mli
