(library
 (name biotk)
 (public_name biotk)
 (c_names pwm_stub)
 (c_flags (-O3))
 (inline_tests (deps ../data/ex1.bam.bai))
 (flags :standard -short-paths)
 (libraries
	angstrom.unix
	biocaml.unix
	biotk.croquis
	biotk.pipes.unix
	cfstream
	core_kernel
	fmt)
 (preprocess (pps ppx_compare ppx_csv_conv ppx_expect ppx_fields_conv ppx_inline_test ppx_let ppx_sexp_conv ppx_deriving.show)))
