(library
 (name biotk)
 (public_name biotk)
 (foreign_stubs (language c) (names pwm_stub) (flags (-O3)))
 (inline_tests (deps ../data/ex1.bam.bai ../data/survival.tsv))
 (flags :standard -short-paths)
 (libraries
	angstrom.unix
        binning
	biocaml.unix
	biotk.croquis
	core
        core_unix
	fmt
	gsl
	tyxml)
 (preprocess (pps ppx_compare ppx_csv_conv ppx_expect ppx_fields_conv ppx_inline_test ppx_let ppx_sexp_conv ppx_deriving.show)))
