(library
 (name biotk)
 (public_name biotk)
 (foreign_stubs (language c) (names pwm_stub) (flags :standard -O3))
 (inline_tests (deps ../data/ex1.bam.bai ../data/survival.tsv ../data/test.ibed))
 (flags :standard -short-paths)
 (libraries
	angstrom.unix
        binning
	biotk.croquis
	core
	core_kernel.binary_packing
        core_unix
	fmt
	gsl
	rresult
	tyxml
	uri
	zip)
 (preprocess (pps ppx_compare ppx_csv_conv ppx_expect ppx_fields_conv ppx_inline_test ppx_let ppx_sexp_conv ppx_deriving.show)))
